--- a/kcms/style/stylepreview.ui
+++ b/kcms/style/stylepreview.ui
@@ -124,6 +124,9 @@
          <property name="value">
           <number>70</number>
          </property>
+         <property name="format">
+          <string>%p%</string>
+         </property>
         </widget>
        </item>
       </layout>
